--- a/wp-content/themes/watts/scss/_page-meetteam.scss
+++ b/wp-content/themes/watts/scss/_page-meetteam.scss
@@ -19,14 +19,15 @@ body.page-template-template-meetteam {
 }
 
 
-.att_attorneys {
+.att_partners {
 	margin:0 auto;
 	width:100%;
-	max-width:1030px;
+	max-width:1280px;
 	position: relative;
 	z-index: 1;
 	display: flex;
 	justify-content: space-between;
+	padding: 0 125px;
 }
 
 .single_attorney {
@@ -125,7 +126,8 @@ body.page-template-template-meetteam {
 
 .meetteam_wrapper {
 	margin:155px auto 0;
-	max-width:1435px;
+	max-width:1685px;
+	padding: 0 125px;
 }
 
 .meetteam_title_wrapper {
@@ -175,7 +177,6 @@ body.page-template-template-meetteam {
 		display: block;
 		clear:both;
 	}
-	
 	.single_attorney {
 		float:left;
 		width:23.4%;
@@ -193,10 +194,249 @@ body.page-template-template-meetteam {
 			.attorney_title_wrapper {
 				height:100px;
 				padding: 36px 40px 0;
+				span.att_name {
+					margin-bottom:0;
+				}
 			}
 		}
 	}
 }
 
 
+
+@media screen and (max-width: 1645px) {
+	
+	
+.meetteam_members {
+	
+	&:after {
+		
+	}
+	.single_attorney {
+		width:31%;
+		margin-right:3.3%;
+		&:hover {
+			
+		}
+		&:nth-of-type(4n + 4) {
+			margin-right:3.3%;
+		}
+		&:nth-of-type(3n + 3) {
+			margin-right:0;
+		}
+		a {
+			.attorney_title_wrapper {
+				
+			}
+		}
+	}
+}
+
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 1250px) {
+	
+	
+	
+	body.page-template-template-meetteam {
+		#internal_main {
+			&:before {
+				height: 800px;
+    	}
+		}
+	} 
+    
+
+.meetteam_members {
+	&:after {
+		
+	}
+	.single_attorney {
+		width:48%;
+		margin-right:3.5%;
+		&:hover {
+			
+		}
+		&:nth-of-type(4n + 4) {
+			margin-right:3.5%;
+		}
+		&:nth-of-type(3n + 3) {
+			margin-right:3.5%;
+		}
+		&:nth-of-type(2n + 2) {
+			margin-right:0%;
+		}
+		a {
+			.attorney_title_wrapper {
+				
+			}
+		}
+	}
+}
+	
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 1130px) {
+	
+	
+	.att_partners, .meetteam_wrapper {
+		padding:0 60px;
+	}
+
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 1066px) {
+	
+	
+	body.page-template-template-meetteam {
+		#internal_main {
+			&:before {
+				height: 700px;
+    	}
+		}
+	} 
+	
+	
+	
+	.meetteam_wrapper {
+		margin: 95px auto 0;
+	}
+	
+	.meetteam_members {
+		.single_attorney {
+			 margin-bottom: 55px;
+		}
+	}
+	
+	.meetteam_members {
+		margin-bottom: 0;
+	}
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 900px) {
+	
+	
+	.att_partners {
+		display: block;
+		max-width: 570px;
+		padding:0 40px;
+	}
+	
+	.single_attorney {
+		margin-bottom:45px;
+	}
+	
+	.meetteam_wrapper {
+		max-width: 570px;
+    padding: 0 40px;
+	}
+	  
+	
+	
+.meetteam_members {
+	&:after {
+		
+	}
+	.single_attorney {
+		width:100%;
+		margin-left:auto;
+		margin-right:auto;
+		margin-bottom:45px;
+		&:hover {
+			
+		}
+		&:nth-of-type(4n + 4) {
+			margin-right:auto;
+		}
+		&:nth-of-type(3n + 3) {
+			margin-right:auto;
+		}
+		&:nth-of-type(2n + 2) {
+			margin-right:auto;
+		}
+		a {
+			.attorney_title_wrapper {
+				
+			}
+		}
+	}
+}
+
+
+	
+} /* Media Query */
+
+@media screen and (max-width: 820px) {
+	
+	
+	body.page-template-template-meetteam {
+		#internal_main {
+			&:before {
+				height: 630px;
+    	}
+		}
+	}
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 767px) {
+	
+	
+	body.page-template-template-meetteam {
+		#internal_main {
+			&:before {
+				height: 530px;
+    	}
+		}
+	}
+	
+	
+	.meetteam_wrapper {
+    margin: 74px auto 0;
+}
+	
+	
+	.single_attorney {
+		a {
+			.attorney_title_wrapper {
+				height:auto;
+				padding: 30px 20px;
+				span.att_name {
+					font-size: 26px;
+				}
+			}
+		}
+	}  
+	
+	
+	.meetteam_members {
+		margin-top:40px;
+		.single_attorney {
+		a {
+			.attorney_title_wrapper {
+				height:auto;
+				padding: 30px 20px;
+				span.att_name {
+					font-size: 26px;
+				}
+			}
+		}
+	} 
+	}
+		
+	
+} /* Media Query */
 
