--- a/wp-content/themes/watts/scss/_page-default.scss
+++ b/wp-content/themes/watts/scss/_page-default.scss
@@ -68,8 +68,8 @@
 
 .container {
 	flex-grow:1;
-	margin:130px 0 0;
-	padding:0 12% 100px 93px;
+// 	margin:130px 0 0;
+	padding:130px 12% 100px 93px;
 }
 
 
@@ -163,7 +163,7 @@
 	
 		
 	.container {
-		padding: 0 85px 100px 85px;
+		padding: 130px 85px 100px 85px;
 	}
 	
 	
@@ -183,8 +183,7 @@
 	
 	
 	.container {
-		padding: 0 55px 100px;
-		margin: 80px 0 0;
+		padding: 80px 55px 100px;
 	}
 	
 	
@@ -238,8 +237,8 @@
 	
 	
 .container {
-	margin: 53px 0 0;
-	padding:0 40px 40px;
+	//margin: 53px 0 0;
+	padding:53px 40px 40px;
 }	
 
 
