--- a/wp-content/themes/watts/scss/_reset.scss
+++ b/wp-content/themes/watts/scss/_reset.scss
@@ -19,6 +19,19 @@ text-shadow: 1px 1px 1px rgba(0,0,0,0.05);
 line-height: 1;
 }
 
+
+/*
+html.fixed, body.fixed {
+	overflow: hidden;
+	height:100%;
+}
+
+	body {
+		overflow-y: scroll;
+	}
+*/
+
+
 body .gform_wrapper .gform_validation_container {
 	display: none;
 }
