--- a/wp-content/themes/watts/scss/style.scss
+++ b/wp-content/themes/watts/scss/style.scss
@@ -7,9 +7,10 @@
 @import "variables",
 				"reset",
 				"slick",
-				// "lity",
+				"lity",
 				"global",
 				"header",
+				"nav",
 				"homepage/section_one",
 				"page-default",
 				"page-pa-directory",
