--- a/wp-content/themes/watts/scss/_header.scss
+++ b/wp-content/themes/watts/scss/_header.scss
@@ -178,6 +178,8 @@ body.no-banner {
 		}
 	
 	
+	
+	
 	.sticky_header {
 		display: flex;
 		width:100%;
@@ -220,6 +222,11 @@ body.no-banner {
 	.sticky_header.visible {
 		opacity: 1;
 		visibility: visible
+	}
+	
+	
+	.sticky_header.no_transition {
+		transition: none;
 	}
 	
 	
