--- a/wp-content/themes/watts/scss/_variables.scss
+++ b/wp-content/themes/watts/scss/_variables.scss
@@ -20,5 +20,6 @@ $blueone: #1372f3;
 $bluetwo: #1b47c9;
 $bluegrad: linear-gradient(to right, #0750e0 0%,#1d3ec0 100%);
 $textgrad: linear-gradient(135deg, #0750e0 35%,#1d3ec0 61%);
+$playbuttongrad: linear-gradient(135deg, #1a9eff 0%,#1b47c9 100%);
 
 $bluedark: #112238;
