--- a/wp-content/themes/watts/scss/_page-blog.scss
+++ b/wp-content/themes/watts/scss/_page-blog.scss
@@ -2,7 +2,8 @@
 
 body.blog, body.single, body.archive, body.category {
 	h1 {
-		padding-bottom: 20px;
+		padding-bottom: 9px;
+		text-transform: lowercase;
 	}
 }
 
