--- a/wp-content/themes/watts/scss/style.scss
+++ b/wp-content/themes/watts/scss/style.scss
@@ -12,6 +12,7 @@
 				"header",
 				"nav",
 				"homepage/section_one",
+				"homepage/section_two",
 				"page-default",
 				"page-pa-directory",
 				"page-attbio",
