--- a/wp-content/themes/watts/scss/style.scss
+++ b/wp-content/themes/watts/scss/style.scss
@@ -13,6 +13,7 @@
 				"nav",
 				"homepage/section_one",
 				"homepage/section_two",
+				"homepage/section_three",
 				"page-default",
 				"page-pa-directory",
 				"page-attbio",
