--- a/wp-content/themes/watts/scss/_global.scss
+++ b/wp-content/themes/watts/scss/_global.scss
@@ -100,7 +100,7 @@ h1,h2,h3,h4 {
 		font-family: $poppins;
 		font-weight:700;
 		font-size:80px;
-		//text-transform: lowercase;
+		text-transform: lowercase;
 		line-height: 90px;
 		margin-bottom: 68px;
 		background: $textgrad;
