--- a/wp-content/themes/watts/scss/homepage/_section_three.scss
+++ b/wp-content/themes/watts/scss/homepage/_section_three.scss
@@ -1,8 +1,5 @@
 #section_three {
 	width:100%;
-	height:5000px;
-	max-width:1750px;
-	
 	margin:0 auto;
 	position: relative;
 	z-index: 1;
@@ -32,11 +29,14 @@
 .sec_three_top {
 	display: flex;
 	padding:45px 125px 0;
+	max-width:1750px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 
 .sec_three_left {
-	flex-basis: 51%;
+	flex-basis: 50%;
 	
 	img {
 		max-width: 100%;
@@ -47,7 +47,7 @@
 
 
 .sec_three_right {
-	flex-basis: 49%;
+	flex-basis: 50%;
 	text-align: left;
 	padding-left:5%;
 	padding-top:11px;
@@ -57,15 +57,15 @@
 }
 
 .sec_three_middle {
-	margin:90px 0 0;
+	margin:90px 0 0 0px;
 	position: relative;
 	&:before {
 		content:"";
 		display: block;
 		position: absolute;
 		top:0;
-		left:0;
-		width:100%;
+		left:430px;
+		width:calc(100% - 430px);
 		height:100%;
 		background: $greylight;
 	}
@@ -79,12 +79,14 @@
 	position: relative;
 	z-index:1;
 	max-width:1415px;
+	padding:117px 0;
 	//padding-left:125px;
 }
 
 
 .sec_three_middle_left {
-	flex-basis: 41%;
+	flex-basis: 50%;
+	padding-right:4%;
 	span {
 		font-family: $poppins;
 		font-weight: 700;
@@ -99,8 +101,8 @@
 
 
 .sec_three_middle_right {
-	flex-basis: 59%;
-	padding-left:14%;
+	flex-basis: 50%;
+	padding-left: 5%;
 	span {
 		color:$bluedark;
 		font-size:20px;
@@ -108,3 +110,321 @@
 		font-weight:600;
 	}
 }
+
+
+.sec_three_bottom {
+	text-align: left;
+	 max-width: 1415px;
+	 margin:100px auto 125px;
+	 column-count:2;
+	 column-gap:10%;
+	 h2.first {
+		 padding-top:0;
+	 }
+	 h2 {
+		 padding-top:16px;
+	 }
+	 // column-gap
+}
+
+
+@media screen and (max-width: 1725px) {
+	
+	
+	.sec_three_middle {
+		&:before {
+			width: 80%;
+			left:20%;
+		}
+	}
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 1650px) {
+	
+	
+	.sec_three_middle {
+		margin: 90px 0 0 125px;
+	}
+	
+	
+	.sec_three_middle_inner {
+		 max-width: 1513px;
+		 padding-right:125px;
+	}
+	
+	
+	.sec_three_middle_left {
+		span {
+			br {
+				display: none;
+			}
+		}
+	}
+	
+	
+	
+	
+	.sec_three_bottom {
+		max-width: 1513px;
+		padding-right:125px;
+		margin:94px 0 55px 125px;
+	}
+	
+	   
+	
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 1450px) {
+	
+	
+	.sec_three_middle {
+		margin: 65px 0 0 0px;
+		padding-left:83px;
+		padding-right:83px;
+	}
+	
+	
+	.sec_three_top {
+		padding-left:83px;
+		padding-right:83px;
+	}
+	
+	.sec_three_inner {
+		h1 {
+			&:before {
+				margin: 0 auto 31px;
+			}
+		}
+	}
+	
+	
+	.sec_three_left {
+    
+    padding-right:3.5%;
+	}
+	
+	.sec_three_right {
+		padding-left: 3.5%;
+		
+  }
+  
+  .sec_three_middle_inner {
+	  max-width: 1750px;
+	  padding-right:0px;
+  }
+  
+      
+  
+  
+  .sec_three_middle_left {
+	  padding-right: 5%;
+		padding-left:30px;
+	  span {
+		  margin-top:-50px;
+	  }
+  }
+  
+  .sec_three_middle_right {
+	  padding-left: 3.5%;
+  }
+  
+  
+  .sec_three_bottom {
+	  margin-left:83px;
+	  padding-left:30px;
+	  column-gap:8.5%;
+/*
+	  max-width: 1750px;
+	  padding-right:83px;
+	  padding-left:83px;
+*/
+  }
+	
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 1250px) {
+	
+	
+	
+.sec_three_inner {
+	text-align: left;
+	padding-top:105px;
+	h1 {
+		padding-left:125px;
+		font-size:70px;
+		line-height: 75px;
+		margin-top:0;
+		margin-bottom: 35px;
+		&:before {
+			display: none;
+		}
+	}
+}
+
+
+.sec_three_top {
+	display: block;
+	padding-top:0;
+}
+
+.sec_three_left {
+	display: none;
+}
+
+
+.sec_three_middle {
+	margin: 78px 0 0 0px;
+	
+	&:before {
+		width:100%;
+		left:0;
+	}
+}
+
+.sec_three_middle_inner {
+	display: block;
+	padding:155px 0 0;
+}
+
+.sec_three_middle_left {
+	padding:0 0 35px 3.5%;
+	
+}
+
+
+.sec_three_middle_right {
+	padding:0 0 86px 3.5%;
+}
+
+
+.sec_three_bottom {
+	column-count:1;
+	padding-right:83px;
+	margin-bottom:80px;
+}
+
+	
+	
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 1130px) {
+	
+	
+	
+	.sec_three_inner {
+		h1 {
+			padding-left:60px;
+			padding-right:60px;
+		}
+	}
+	
+	
+	.sec_three_top {
+		padding-left:60px;
+		padding-right:60px;
+	}
+	
+	.sec_three_right {
+		padding-left:0;
+	}
+	
+	
+	.sec_three_middle {
+		padding-left:60px;
+		padding-right:60px;
+	}
+	
+	
+	.sec_three_middle_left {
+		padding-left:0;
+	}
+	
+	.sec_three_middle_right {
+		padding-left:0;
+	}
+	
+	.sec_three_bottom {
+		margin-left:0;
+		padding-left:60px;
+		padding-right:60px;
+	}
+	
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 767px) {
+	
+	
+	.sec_three_inner {
+		padding-top: 65px;
+		h1 {
+			font-size:40px;
+			line-height: 45px;
+			margin-bottom: 23px;
+			padding-left:40px;
+			padding-right:40px;
+		}
+	}
+	
+	
+	.sec_three_top {
+		padding-left:40px;
+		padding-right:40px;
+		margin-bottom: 75px;
+	}
+
+
+	.sec_three_middle {
+    margin: 0px 0 0 0px;
+    padding-top:80px;
+    padding-left:40px;
+    padding-right:40px
+	}
+	
+	
+	.sec_three_middle_inner {
+		padding-top:0;
+		padding-bottom:0;
+	}
+	
+	
+	.sec_three_middle_left {
+		span {
+			font-size:28px;
+			line-height: 40px;
+			display: block;
+			margin-top:0;
+		}
+	}
+	
+	.sec_three_middle_right {
+		padding-bottom: 70px;
+	}
+	
+	
+	.sec_three_bottom {
+		margin-top: 78px;
+		padding-left:40px;
+		padding-right:40px;
+		margin-bottom: 45px;
+	}
+	
+	
+	
+	
+} /* Media Query */
