--- a/wp-content/themes/watts/scss/style.scss
+++ b/wp-content/themes/watts/scss/style.scss
@@ -14,6 +14,7 @@
 				"homepage/section_one",
 				"homepage/section_two",
 				"homepage/section_three",
+				"homepage/section_four",
 				"page-default",
 				"page-pa-directory",
 				"page-attbio",
