--- a/wp-content/themes/watts/scss/style.scss
+++ b/wp-content/themes/watts/scss/style.scss
@@ -15,6 +15,7 @@
 				"homepage/section_two",
 				"homepage/section_three",
 				"homepage/section_four",
+				"homepage/section_five",
 				"page-default",
 				"page-pa-directory",
 				"page-attbio",
