--- a/wp-content/themes/watts/scss/style.scss
+++ b/wp-content/themes/watts/scss/style.scss
@@ -16,6 +16,8 @@
 				"homepage/section_three",
 				"homepage/section_four",
 				"homepage/section_five",
+				"homepage/section_six",
+				"homepage/section_seven",
 				"page-default",
 				"page-pa-directory",
 				"page-attbio",
