--- a/wp-content/themes/watts/scss/homepage/_section_three.scss
+++ b/wp-content/themes/watts/scss/homepage/_section_three.scss
@@ -118,9 +118,6 @@
 	 margin:100px auto 125px;
 	 column-count:2;
 	 column-gap:10%;
-	 h2.first {
-		 padding-top:0;
-	 }
 	 h2 {
 		 padding-top:16px;
 	 }
@@ -185,14 +182,18 @@
 	
 	.sec_three_middle {
 		margin: 65px 0 0 0px;
-		padding-left:83px;
-		padding-right:83px;
+/*
+		padding-left:110px;
+		padding-right:110px;
+*/
 	}
 	
 	
 	.sec_three_top {
-		padding-left:83px;
-		padding-right:83px;
+/*
+		padding-left:110px;
+		padding-right:110px;
+*/
 	}
 	
 	.sec_three_inner {
@@ -216,7 +217,8 @@
   
   .sec_three_middle_inner {
 	  max-width: 1750px;
-	  padding-right:0px;
+	  margin-left:125px;
+	  //padding-right:0px;
   }
   
       
@@ -224,7 +226,7 @@
   
   .sec_three_middle_left {
 	  padding-right: 5%;
-		padding-left:30px;
+		padding-left:00px;
 	  span {
 		  margin-top:-50px;
 	  }
@@ -236,9 +238,11 @@
   
   
   .sec_three_bottom {
-	  margin-left:83px;
-	  padding-left:30px;
+	  margin-left:125px;
+	  //padding-left:30px;
+	  //column-gap: 7%;
 	  column-gap:8.5%;
+	  padding-right:125px;
 /*
 	  max-width: 1750px;
 	  padding-right:83px;
@@ -283,7 +287,7 @@
 
 .sec_three_middle {
 	margin: 78px 0 0 0px;
-	
+	padding-right:125px;
 	&:before {
 		width:100%;
 		left:0;
@@ -344,6 +348,11 @@
 	.sec_three_middle {
 		padding-left:60px;
 		padding-right:60px;
+	}
+	
+	.sec_three_middle_inner {
+		max-width:100%;
+		margin-left:0;
 	}
 	
 	
