--- a/wp-content/themes/watts/scss/homepage/_section_seven.scss
+++ b/wp-content/themes/watts/scss/homepage/_section_seven.scss
@@ -1,12 +1,170 @@
 #section_seven {
 	width:100%;
-	
 	background: $bluedark;
 }
 
 .sec_seven_inner {
-	max-width:1600px;
-	background: red;
+	max-width:1850px;
 	margin:0 auto;
-	height:1000px;
+	padding:174px 125px 127px;
 }
+
+
+.sec_seven_title_wrapper {
+	display: flex;
+	span {
+		display: block;
+	}
+	span.sec_seven_title {
+		color:#fff;
+		text-transform: uppercase;
+		font-family: $poppins;
+		font-size:16px;
+		letter-spacing: 0.25em;
+		font-weight: 700;
+		flex-shrink:0;
+	}
+	span.sec_seven_blueline {
+		flex-grow: 1;
+		width:100%;
+		height:3px;
+		background: $blueone;
+		margin-left:25px;
+		margin-top:6px;
+	}
+}
+
+.sec_seven_pa {
+	margin:70px 0 40px;
+	&:after {
+		content:"";
+		display: block;
+		clear:both;
+	}
+}
+
+
+
+.sec_seven_single_pa {
+	float:left;
+	width:23.5%;
+	height:387px;
+	box-shadow: 0px 0px 46px 0px rgba(0,0,0,0.64);
+	position: relative;
+	background: $bluedark;
+	position: relative;
+	margin-bottom:32px;
+	&:hover {
+		a {
+			.sec_seven_reg {
+				span {
+					&:after {
+						opacity: 0;
+					}
+				}
+			}
+			.sec_seven_hover {
+				opacity: 1;
+			}
+		}
+	}
+	a {
+		display: flex;
+		align-items: flex-end;
+		height: 100%;
+		text-decoration: none;
+		padding:0 45px 45px;
+		img {
+			position: absolute;
+			top:30px;
+			right:30px;
+			width:75px;
+			height:75px;
+		}
+		.sec_seven_reg {
+			
+			img.grad_svg {
+			
+			}
+			span {
+				display: block;
+				color:#fff;
+				text-transform: lowercase;
+				font-family: $poppins;
+				font-weight:600;
+				font-size:22px;
+				letter-spacing: 0.05em;
+				position: relative;
+				z-index: 1;
+				&:after {
+					content:"";
+					display: block;
+					width:30px;
+					height:3px;
+					background: $bluetwo;
+					margin-top:30px;
+					opacity: 1;
+					transition: all 200ms ease-in-out;
+				}
+			}
+		}
+		.sec_seven_hover {
+			position: absolute;
+			top:0;
+			left:0;
+			width:100%;
+			height:100%;
+			background:$textgrad;
+			opacity: 0;
+			transition: all 200ms ease-in-out;
+		}
+	}
+}
+
+
+.sec_seven_single_pa {
+	margin-right:2%;
+	&:nth-of-type(4n + 4) {
+		margin-right:0;
+	}
+}
+
+a.pa_view_all {
+	text-transform: uppercase;
+	font-size:15px;
+	letter-spacing: 0.25em;
+	position: relative;
+	z-index: 1;
+	width:201px;
+	margin:0 auto;
+	display: block;
+	text-align: center;
+	padding: 26px 0px;
+	&:before {
+		opacity: 1;
+		visibility: visible;
+		transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
+	}
+	&:after {
+		background:transparent;
+		border:2px solid transparent;
+		opacity: 1;
+		visibility: visible;
+	}
+	&:hover {
+		background: transparent;
+		color:#fff;
+		&:before {
+			opacity: 0;
+			visibility: hidden;
+		}
+		&:after {
+			opacity: 1;
+			visibility: visible;
+			border:2px solid $blueone;
+		}
+	}
+}
+
+
+
