--- a/wp-content/themes/watts/scss/homepage/_section_four.scss
+++ b/wp-content/themes/watts/scss/homepage/_section_four.scss
@@ -159,6 +159,7 @@
 		width:42px;
 		display: flex !important;
 		align-items: center;
+		cursor: pointer;
 		&:hover {
 			svg#arrow {
 				fill:$blueone;
