--- a/wp-content/themes/watts/scss/homepage/_section_three.scss
+++ b/wp-content/themes/watts/scss/homepage/_section_three.scss
@@ -14,6 +14,7 @@
 		line-height: 110px;
 		max-width:890px;
 		margin-top:-47px;
+		padding-bottom: 12px;
 		&:before {
 			content:"";
 			display: block;
@@ -28,7 +29,7 @@
 
 .sec_three_top {
 	display: flex;
-	padding:45px 125px 0;
+	padding: 32px 125px 0;
 	max-width:1750px;
 	margin-left:auto;
 	margin-right:auto;
@@ -190,6 +191,7 @@
 	
 	
 	.sec_three_top {
+	padding: 39px 125px 0;
 /*
 		padding-left:110px;
 		padding-right:110px;
@@ -342,6 +344,7 @@
 	
 	.sec_three_right {
 		padding-left:0;
+		padding-top:0;
 	}
 	
 	
@@ -384,7 +387,7 @@
 		h1 {
 			font-size:40px;
 			line-height: 45px;
-			margin-bottom: 23px;
+			margin-bottom: 15px;
 			padding-left:40px;
 			padding-right:40px;
 		}
