--- a/wp-content/themes/watts/scss/_page-contact.scss
+++ b/wp-content/themes/watts/scss/_page-contact.scss
@@ -200,7 +200,16 @@ body.page-template-template-contact {
   
   .contact_right {
 	  margin-top: 70px;
+	  .single_location {
+	  	&:nth-last-of-type(-n + 3) {
+		  	margin-bottom:0px;
+	  	}
+	  }
   }
+  
+  
+  
+  
 	
 	
 } /* Media Query */
@@ -222,6 +231,12 @@ body.page-template-template-contact {
 			&:nth-of-type(2n + 1) {
 				flex-basis:47%;
 			}
+			&:nth-last-of-type(-n + 3) {
+		  	margin-bottom: 72px;
+	  	}
+	  	&:nth-last-of-type(-n + 2) {
+		  	margin-bottom: 0px;
+	  	}
 		}
 	}
 	
@@ -270,6 +285,12 @@ body.page-template-template-contact {
 		display: block;
 		.single_location {
 			margin-bottom: 62px;
+			&:nth-last-of-type(-n + 2) {
+		  	margin-bottom: 72px;
+	  	}
+	  	&:nth-last-of-type(-n + 1) {
+		  	margin-bottom: 0px;
+	  	}
 		}
 	}
 	
