--- a/wp-content/themes/watts/scss/_page-pa-directory.scss
+++ b/wp-content/themes/watts/scss/_page-pa-directory.scss
@@ -49,6 +49,7 @@
 			margin-right:4%;
 			display: flex;
 			align-items: center;
+			line-height: 23px;
 			&:nth-of-type(4n + 4) {
 				margin-right:0;
 			}
