--- a/wp-content/themes/watts/scss/homepage/_section_six.scss
+++ b/wp-content/themes/watts/scss/homepage/_section_six.scss
@@ -6,7 +6,7 @@
 .sec_six_inner {
 	max-width:1650px;
 	margin:0 auto;
-	padding:113px 125px;
+	padding: 116px 125px 154px;
 	img.sp_1 {
 		display: block;
 		margin:0 auto 33px;
@@ -22,6 +22,7 @@
 		text-align: center;
 		max-width: 1315px;
 		margin:0 auto;
+		padding: 5px 0 0;
 	}
 	.quote_info {
 		border-top:3px solid $blueone;
@@ -29,7 +30,7 @@
 		display: flex;
 		justify-content: center;
 		max-width:338px;
-		margin:37px auto 0;
+		margin:27px auto 0;
 		padding:22px 0;
 		span {
 			font-family: $poppins;
@@ -59,7 +60,7 @@
 .sec_six_content {
 	column-count:2;
 	column-gap:95px;
-	padding:97px 0 0;
+	padding: 109px 0 0;
 	h2, h3, h4, ul, ol, li, p {
 		width:100%;
 		display: inline-block;
@@ -74,12 +75,10 @@
 }
 
 .sec_six_inner {
-	padding-left: 110px;
-	padding-right:110px;
-/*
-	padding-left:85px;
-	padding-right:85px;
-*/
+	padding: 116px 125px 102px;
+	.quote_info {
+		margin: 32px auto 0;
+	}
 }
 	
 	
