--- a/wp-content/themes/watts/scss/_page-attbio.scss
+++ b/wp-content/themes/watts/scss/_page-attbio.scss
@@ -60,6 +60,11 @@
 				}
 			}
 		}
+		.bio_play_wrapper {
+			&:after {
+				opacity: 1;
+			}
+		}
 	}
 	a {
 		display: block;
@@ -90,7 +95,6 @@
 	width:100%;
 	background: #fff;
 	display: flex;
-// 	justify-content: center;
 	align-items: center;
 	padding:0 0 0 50px;
 }
@@ -113,6 +117,19 @@
 		border-top: 12px solid transparent;
 		border-bottom: 12px solid transparent;
 		border-left: 15px solid #fff;
+	}
+	&:after {
+		content:"";
+		display: block;
+		width:117px;
+		height:117px;
+		border-radius:50%;
+		border: 2px solid $blueone;
+		position: absolute;
+		top:-11px;
+		left:-11px;
+		opacity: 0;
+		transition: all 300ms ease-in-out;
 	}
 }
 
