--- a/wp-content/themes/watts/scss/_page-blog.scss
+++ b/wp-content/themes/watts/scss/_page-blog.scss
@@ -3,7 +3,7 @@
 body.blog, body.single, body.archive, body.category {
 	h1 {
 		padding-bottom: 9px;
-		text-transform: lowercase;
+		//text-transform: lowercase;
 	}
 }
 
