--- a/wp-content/themes/watts/scss/_global.scss
+++ b/wp-content/themes/watts/scss/_global.scss
@@ -104,7 +104,7 @@ h1,h2,h3,h4 {
 		font-family: $poppins;
 		font-weight:700;
 		font-size:80px;
-		text-transform: lowercase;
+		//text-transform: lowercase;
 		line-height: 90px;
 		margin-bottom: 68px;
 		background: $textgrad;
@@ -115,6 +115,7 @@ h1,h2,h3,h4 {
 	
 	// i guess only some mock ups have capitalized header?
 	
+/*
 	body.page-template-template-bio,
 	body.page-template-template-meetteam,
 	body.page-template-template-about,
@@ -124,6 +125,7 @@ h1,h2,h3,h4 {
 			text-transform: none;
 		}
 	}
+*/
 	
 	
 	
